fixed footer hamburger & its alignment

--- a/themes/egghead-theme/source/css/footer.css
+++ b/themes/egghead-theme/source/css/footer.css
@@ -42,12 +42,12 @@
     .footer-nav-toggle {
       cursor: pointer;
       border: 0;
-      width: 3em;
-      height: 3em;
+      width: 2.5em;
+      height: 2.5em;
       padding: 0em;
-      margin:0 0 0 10rem;
+      margin:-3px 0 0 11rem;
       border-radius: 50%;
-      background: #212121;
+      background: #141618;
       color: white;
       transition: opacity 250ms ease;
       position: absolute;
@@ -69,8 +69,8 @@
     .hamburger::before,
     .hamburger::after {
       display: block;
-      margin: 0 auto;
-      height: 3px;
+      margin: 1px auto;
+      height: 2px;
       background: white;
     }
     
@@ -106,6 +106,14 @@
   }
 @media (max-width: 411px){
   .footer-nav-toggle {
-    margin:0 0 0 7rem;
+    margin:-3px 0 0 7rem;
+    width: 2.5em;
+    height: 2.5em;
   }
+  .hamburger,.hamburger::before,.hamburger::after {
+      display: block;
+      margin: 1px auto;
+      height: 2px;
+      background: white;
+    }
 }
